BuildHughes/translation-tool/inputs/source_meta/objects/Source_Customer__c.object
<CustomObject>
    <fields>
        <fullName>Channel__c</fullName>
        <label>Channel</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Self-Care Portal</fullName>
                </value>
                <value>
                    <fullName>CSR</fullName>
                </value>
                <value>
                    <fullName>Self-Ordering Website</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Program__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Customer Program</label>
        <referenceTo>Program__c</referenceTo>
        <relationshipLabel>Source Customers</relationshipLabel>
        <relationshipName>Source_Customers</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DSS_Program_Code__c</fullName>
        <label>DSS Program Code</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This represents HTB Placeholder Account per country</description>
        <label>Owner Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Partner</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Source Customers</relationshipLabel>
        <relationshipName>Source_Customers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Source_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Source Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Partner</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Source Customers (Source Account)</relationshipLabel>
        <relationshipName>Source_Customers1</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Source Customer</label>
    <nameField>
        <label>Source Customer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Source Customers</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>